update 17/06/2024 formulario modificado {{ form }}, modelos con sus respectivas opciones

--- a/BEEL/Sistema_autenticacion_registro/templates/empresas/formulario.html
+++ b/BEEL/Sistema_autenticacion_registro/templates/empresas/formulario.html
@@ -20,7 +20,8 @@
                 <a
                     name=""
                     id=""
-                    class="btn btn-primary bg-gradient btn-lg"
+                    class="btn btn-primary bg-gradient btn-lg mt-3"
+                    type="submit"
                     href="{% url 'index' %}"
                     role="button"
                     >Enviar</a"
@@ -28,7 +29,7 @@
                 <a
                     name=""
                     id=""
-                    class="btn btn-success bg-gradient btn-lg"
+                    class="btn btn-success bg-gradient btn-lg mt-3"
                     href="{% url 'index' %}"
                     role="button"
                     >Regresar</a"
