update 20/06/2024 login en proceso y feeds de empresa y postulante agregados

--- a/BEEL/Sistema_autenticacion_registro/templates/paginas/index.html
+++ b/BEEL/Sistema_autenticacion_registro/templates/paginas/index.html
@@ -12,9 +12,18 @@
                 name=""
                 id=""
                 class="btn btn-primary bg-gradient btn-lg"
-                href="{% url 'login' %}"
+                href="{% url 'postulantelogin' %}"
                 role="button"
-                >Iniciar sesión</a"
+                >Iniciar sesión como postulante</a"
+                ></a>
+
+                <a
+                name=""
+                id=""
+                class="btn btn-primary bg-gradient btn-lg"
+                href="{% url 'empresalogin' %}"
+                role="button"
+                >Iniciar sesión como empresa</a"
                 ></a>
 
                 <a
