--- a/BEEL/Sistema_autenticacion_registro/templates/registration/login.html
+++ b/BEEL/Sistema_autenticacion_registro/templates/registration/login.html
@@ -1,7 +1,37 @@
-<h1>Inicio de sesión</h1>
+{% load static %}
 
-<form method="post">
-    {% csrf_token %}
-    {{ form.as_p }}
-    <input type="submit" value="Iniciar sesión">
-</form>
+<!DOCTYPE html>
+<html lang="es">
+<head>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>B.E.E.L</title>
+  <link rel="stylesheet" href="{% static 'css/login.css' %}">
+</head>
+<body>
+  <div class="formulario">
+    <header class="login-header">
+      <h1>Inicia Sesión</h1>
+    </header>
+    <form method="post">
+        
+        {% csrf_token %}
+        <div class="username">
+            <input type="text" required>
+            <label for="cedula">Número de documento</label>
+        </div>
+        <div class="username">
+            <input type="password" required>
+            <label for="password">Contraseña</label>
+        </div>
+        <div class="recordar">¿Olvidó su contraseña?</div>
+            <input type="submit" value="Iniciar sesión">
+        <div class="registrar">
+            ¿No tienes una cuenta?
+            <a href="{% url 'index' %}">Regístrate</a>
+        </div>
+    </form>
+  </div>
+</body>
+</html>
