update 21/06/2024 pequeños cambios en los modelos feedE

--- a/BEEL/Sistema_autenticacion_registro/templates/paginas/index.html
+++ b/BEEL/Sistema_autenticacion_registro/templates/paginas/index.html
@@ -12,18 +12,9 @@
                 name=""
                 id=""
                 class="btn btn-primary bg-gradient btn-lg"
-                href="{% url 'postulantelogin' %}"
+                href="{% url 'login' %}"
                 role="button"
-                >Iniciar sesión como postulante</a"
-                ></a>
-
-                <a
-                name=""
-                id=""
-                class="btn btn-primary bg-gradient btn-lg"
-                href="{% url 'empresalogin' %}"
-                role="button"
-                >Iniciar sesión como empresa</a"
+                >Iniciar sesión</a"
                 ></a>
 
                 <a
