update 21/06/2024 se agregaron las views, url, formulario de publicacion, plantilla de formulario, header, footer y los estilos

--- a/BEEL/feedE/templates/homeE.html
+++ b/BEEL/feedE/templates/homeE.html
@@ -4,5 +4,13 @@
 
         
 <h1>Bienvenido empresa</h1>
+<a
+    name=""
+    id=""
+    class="btn btn-secondary bg-gradient btn-lg"
+    href="{% url 'formularioOferta' %}"
+    role="button"
+    >Publicar oferta laboral</a"
+    ></a>
 
 {% endblock %}
