Agregación de las apps feedP y feeE con sus htmls y css

--- a/BEEL/Sistema_autenticacion_registro/static/css/index.css
+++ b/BEEL/Sistema_autenticacion_registro/static/css/index.css
@@ -1,7 +1,7 @@
 /* Estilo general (sin cambios) */
 
 .registro {
-    background-color: #fff;
+    background-color: #f1f1f1;
     padding: 50px 0;
     text-align: center;
     position: relative; /* Posicionamiento relativo para la sombra */
