--- a/BEEL/feedP/templates/plantilla.html
+++ b/BEEL/feedP/templates/plantilla.html
@@ -26,7 +26,7 @@
         </div>
         <nav>
             <ul class="nav-links">
-                <li><a href="{% url 'homeP' %}">Inicio</a></li>
+                <li><a href="{% url 'welcome' %}">Inicio</a></li>
                 <li><a href="{% url 'aboutus' %}">Sobre nosotros</a></li>
             </ul>
         </nav>
