--- a/BEEL/Sistema_autenticacion_registro/static/css/footer.css
+++ b/BEEL/Sistema_autenticacion_registro/static/css/footer.css
@@ -10,7 +10,7 @@
      justify-content: flex-end;
      align-items: flex-end; */
      min-height: 100vh;
-     background-color: white;
+     background-color: #f0f0f0;
  }
  
 .footer{
