--- a/BEEL/feedP/templates/homeP.html
+++ b/BEEL/feedP/templates/homeP.html
@@ -1,8 +1,25 @@
-{% extends "paginas/plantilla.html" %}
+{% extends "plantilla.html" %}
 {% load static %}
 {% block content %}
 
-        
-<h1>Bienvenido postulante</h1>
+<link rel="stylesheet" href="{% static 'homeP.css' %}">
+<body>
+    
+    <main>
+        <section class="bienvenido">
+            <h1>Bienvenido Postulante</h1>
+            <p class="bienvenido-parrafo">Tu portal para encontrar las mejores oportunidades laborales.</p>
+        </section>
+
+        <section class="opciones">
+            <a href="#" class="opciones-mi-perfil">Mi perfil</a>
+            <a href="#" class="opciones-ver-ofertas-laborales">Ver ofertas laborales</a>
+            <a href="#" class="opciones-ver-mis-postulaciones">Ver mis postulaciones</a>
+
+            <a href="#" class="opciones-cerrar-sesion">Cerrar sesión</a>
+        </section>
+    </main>
+
+</body>
 
 {% endblock %}
