--- a/BEEL/registro_login/templates/registro/iniciar_sesion.html
+++ b/BEEL/registro_login/templates/registro/iniciar_sesion.html
@@ -2,18 +2,25 @@
 {% load static %}
 {% block content %}
 
-<div class="container mb-5 mt-5" id="container">
-    <div class="card text-start mx-auto" style="width: 30rem;">
-        <div class="card-body">
-            <h4 class="card-title">Formulario de registro</h4>
-            <p class="card-text">Ingresa tus datos:</p>
+    <link rel="stylesheet" href="{% static 'css/login.css' %}">
+
+<body>
+    <div class="container" id="container">
+        <div class="card text-start mx-auto" style="width: 30rem;">
+            <div class="card-body">
+                <h4 class="card-title">Inicia Sesión</h4>
+                <p class="card-text">Ingresa tus credenciales:</p>
                 <form method="post">
                     {% csrf_token %}
                     {{ form.as_p }}
                     <button type="submit">Iniciar Sesión</button>
                 </form>
-        </div> 
+            </div>
+        </div>
     </div>
-</div>
+
+    <script src="script.js"></script>  </body>
+</body>
+
 
 {% endblock %}
