update formulario de ofertas, modelo o clase de oferta en models.py, vista de formulario de oferta y vista de lista de oferta, urls configuradas para las plantillas formularioOferta y lista_ofertas

--- a/BEEL/registro_login/templates/registro/home_postulante.html
+++ b/BEEL/registro_login/templates/registro/home_postulante.html
@@ -20,7 +20,7 @@
         </section>
     
         <section class="opciones">
-            <a href="#" class="opciones-ver-ofertas-laborales">Ver ofertas laborales</a>
+            <a href="{% url 'lista_ofertas' %}" class="opciones-ver-ofertas-laborales">Ver ofertas laborales</a>
             <a href="#" class="opciones-ver-mis-postulaciones">Mis postulaciones</a>
             <form method="post" action="{% url 'logout' %}">
                 {% csrf_token %}
