update formulario de ofertas, modelo o clase de oferta en models.py, vista de formulario de oferta y vista de lista de oferta, urls configuradas para las plantillas formularioOferta y lista_ofertas

--- a/BEEL/registro_login/templates/registro/home_empresa.html
+++ b/BEEL/registro_login/templates/registro/home_empresa.html
@@ -1,15 +1,25 @@
+
 {% extends "plantilla.html" %}
 {% load static %}
 {% block content %}
 
 
 <!--<body>
+
+<!DOCTYPE html>
+<html>
+<head>
+    <title>Inicio - Empresa</title>
+</head>
+<body>
+
     <h2>Bienvenido, Empresa</h2>
     <p>Esta es la página principal para el rol de Empresa.</p>
     <form method="post" action="{% url 'logout' %}">
         {% csrf_token %}
         <button type="submit">Cerrar sesión</button>
     </form>
+
 </body>-->
 
 <link rel="stylesheet" href="{% static 'css/homeE.css' %}">
@@ -37,3 +47,5 @@
 </body>
 
 {% endblock %}
+
+
