--- a/BEEL/registro_login/templates/registro/home_postulante.html
+++ b/BEEL/registro_login/templates/registro/home_postulante.html
@@ -3,10 +3,19 @@
 {% block content %}
 
 <!--<h2>Bienvenido, Postulante</h2>
+<!DOCTYPE html>
+<html>
+<head>
+    <title>Inicio - Postulante</title>
+</head>
+<body>
+    <h2>Bienvenido, Postulante</h2>
+
     <p>Esta es la página principal para el rol de Postulante.</p>
     <form method="post" action="{% url 'logout' %}">
         {% csrf_token %}
         <button type="submit">Cerrar sesión</button>
+
     </form>-->
 
 
@@ -32,3 +41,6 @@
 </body>
 
 {% endblock %}
+
+
+
