--- a/BEEL/registro_login/templates/registro/iniciar_sesion.html
+++ b/BEEL/registro_login/templates/registro/iniciar_sesion.html
@@ -2,6 +2,7 @@
 {% load static %}
 {% block content %}
 
+
     <link rel="stylesheet" href="{% static 'css/login.css' %}">
 
 <body>
@@ -10,17 +11,30 @@
             <div class="card-body">
                 <h4 class="card-title">Inicia Sesión</h4>
                 <p class="card-text">Ingresa tus credenciales:</p>
+
+<div class="container mb-5 mt-5" id="container">
+    <div class="card text-start mx-auto" style="width: 30rem;">
+        <div class="card-body">
+            <h4 class="card-title">Formulario de registro</h4>
+            <p class="card-text">Ingresa tus datos:</p>
+
                 <form method="post">
                     {% csrf_token %}
                     {{ form.as_p }}
                     <button type="submit">Iniciar Sesión</button>
                 </form>
+
             </div>
         </div>
     </div>
 
     <script src="script.js"></script>  </body>
 </body>
+
+
+        </div> 
+    </div>
+</div>
 
 
 {% endblock %}
