--- a/BEEL/registro_login/templates/registro/registro.html
+++ b/BEEL/registro_login/templates/registro/registro.html
@@ -3,12 +3,16 @@
 {% block content %}
 
 
+
 <link rel="stylesheet" href="{% static 'css/form.css' %}">
+
+
 <div class="container mb-5 mt-5" id="container">
     <div class="card text-start mx-auto" style="width: 30rem;">
         <div class="card-body">
             <h4 class="card-title">Formulario de registro</h4>
             <p class="card-text">Ingresa tus datos:</p>
+
             <form method="post">
                 {% csrf_token %}
                 {{ form }}
@@ -20,9 +24,25 @@
                     >Regresar</a
                 >
             </form>
+
+                <form method="post">
+                <link rel="stylesheet" href="{% static 'css/form.css' %}">
+            
+                    {% csrf_token %}
+                    {{ form }}
+                    <button type="submit" class="btn btn-success bg-gradient btn-lg mt-3">Registrarse</button>
+                    <button type="reset" class="btn btn-secondary bg-gradient btn-lg mt-3">Limpiar</button>
+                    <a
+                    class="btn btn-primary bg-gradient btn-lg mt-3"
+                    href="{% url 'welcome' %}"
+                    >Regresar</a"
+                    ></a>
+                </form>
+
         </div> 
     </div>
 </div>
+
 
 
 {% endblock %}
