--- a/BEEL/registro_login/templates/registro/home_empresa.html
+++ b/BEEL/registro_login/templates/registro/home_empresa.html
@@ -27,7 +27,7 @@
 
     <main>
         <section class="bienvenido">
-            <h1>Bienvenido Empresa</h1>
+            <h1>Bienvenido {{ username }}</h1>
             <p class="bienvenido-parrafo">Tu portal donde podras publicar tus ofertas laborales.</p>
         </section>
 
