titulo del formulario

--- a/BEEL/registro_login/templates/registro/formularioOferta.html
+++ b/BEEL/registro_login/templates/registro/formularioOferta.html
@@ -9,7 +9,7 @@
         <div class="card text-start mx-auto" style="width: 30rem;">
             <div class="card-body">
                 <h4 class="card-title">Formulario de registro</h4>
-                <p class="card-text">Ingresa tus datos:</p>
+                <p class="card-text">Ingresa los datos necesarios para la oferta:</p>
 
                 <form method="post">
                     {% csrf_token %}
