estilos oferta laborl, publicar oferta laboral y registro usuario

--- a/BEEL/registro_login/templates/registro/home_postulante.html
+++ b/BEEL/registro_login/templates/registro/home_postulante.html
@@ -24,7 +24,7 @@
     
     <main>
         <section class="bienvenido">
-            <h1>Bienvenid@ {{ username }}</h1>
+            <h1>Bienvenido {{ username }}</h1>
             <p class="bienvenido-parrafo">Tu portal para encontrar las mejores oportunidades laborales.</p>
         </section>
     
