--- a/BEEL/registro_login/templates/registro/formularioOferta.html
+++ b/BEEL/registro_login/templates/registro/formularioOferta.html
@@ -8,8 +8,8 @@
     <div class="container mb-5 mt-5" id="container">
         <div class="card text-start mx-auto" style="width: 30rem;">
             <div class="card-body">
-                <h4 class="card-title">Formulario de registro</h4>
-                <p class="card-text">Ingresa tus datos:</p>
+                <h4 class="card-title">Publicar Oferta Laboral</h4>
+                <p class="card-text">Complete los siguientes campos:</p>
 
                 <form method="post">
                     {% csrf_token %}
