--- a/BEEL/registro_login/templates/registro/registro.html
+++ b/BEEL/registro_login/templates/registro/registro.html
@@ -4,13 +4,13 @@
 
 
 
-<link rel="stylesheet" href="{% static 'css/form.css' %}">
+<link rel="stylesheet" href="{% static 'css/formRegistro.css' %}">
 
 
 <div class="container mb-5 mt-5" id="container">
     <div class="card text-start mx-auto" style="width: 30rem;">
         <div class="card-body">
-            <h4 class="card-title">Formulario de registro</h4>
+            <h4 class="card-title text-center">Registrate</h4>
             <p class="card-text">Ingresa tus datos:</p>
 
             <form method="post">
@@ -21,8 +21,7 @@
                 <a
                     class="btn btn-primary bg-gradient btn-lg mt-3"
                     href="{% url 'welcome' %}"
-                    >Regresar</a
-                >
+                    >Regresar</a>
             </form>
         </div> 
     </div>
