fomulario de aplicación en forms.py, modelo de Aplicación con llaves foráneas a tipos de documento y tipo de discapacidad, urls actualizadas, vista del formulario de aplicacion, vista para ver ofertas publicadas y vista para visualizar los postulantes aplicados, plantilla de aplicación de la oferta, plantilla para ver las ofertas publicadas por la empresa y plantilla para ver los postulantes aplicados

--- a/BEEL/registro_login/templates/registro/home_empresa.html
+++ b/BEEL/registro_login/templates/registro/home_empresa.html
@@ -33,7 +33,7 @@
 
         <section class="opciones">
             <a href="{% url 'formularioOferta' %}" class="opciones-publicar">Publicar oferta laboral</a>
-            <a href="#" class="opciones-mi-oferta">Ver mi oferta laboral</a>
+            <a href="{% url 'mis_ofertas' %}" class="opciones-mi-oferta">Ver ofertas laborales publicadas</a>
             <a href="#" class="opciones-ver-postulantes">Ver postulantes</a>
 
             <form method="post" action="{% url 'logout' %}">
