estilos oferta laborl, publicar oferta laboral y registro usuario

--- a/BEEL/registro_login/templates/registro/lista_ofertas.html
+++ b/BEEL/registro_login/templates/registro/lista_ofertas.html
@@ -22,6 +22,8 @@
       <p><strong>Fecha de Expiración:</strong> {{ oferta.fecha_expiracion }}</p>
     </div>
   </div>
+
+  <strong></strong>
 {% endfor %}
 
 {% endblock %}
