--- a/BEEL/registro_login/templates/registro/cambiar_password.html
+++ b/BEEL/registro_login/templates/registro/cambiar_password.html
@@ -1,14 +1,12 @@
 {% extends "plantilla2.html" %}
 {% load static %}
 {% block content %}
-
-
-    <h1>Aplicar a {{ oferta.titulo_cargo }}</h1>
+    <h2>Cambiar Contraseña</h2>
     <form method="post">
         {% csrf_token %}
         {{ form.as_p }}
-        <button type="submit">Enviar aplicación</button>
+        <button type="submit">Actualizar Contraseña</button>
     </form>
-
+    <a href="{% url 'editar_perfil' %}">Volver a Editar Perfil</a>
 
 {% endblock %}
