agregacion de estilos en cambiar perfil y contraseña htmls y css

--- a/BEEL/registro_login/templates/registro/editar_perfil.html
+++ b/BEEL/registro_login/templates/registro/editar_perfil.html
@@ -2,12 +2,16 @@
 {% load static %}
 {% block content %}
 
-    <h2>Editar Perfil</h2>
+<link rel="stylesheet" href="{% static 'css/editar_perfil.css' %}">
+ <div class="container">
+    <h1>Editar Perfil</h1>
     <form method="post">
         {% csrf_token %}
         {{ form.as_p }}
         <button type="submit">Guardar Cambios</button>
     </form>
     <a href="{% url 'cambiar_password' %}">Cambiar Contraseña</a>
+</div>
+      
 
 {% endblock %}
