--- a/BEEL/registro_login/templates/plantilla2.html
+++ b/BEEL/registro_login/templates/plantilla2.html
@@ -27,10 +27,10 @@
         <nav>
             <ul class="nav-links">
                 <li>
-                    <form method="post" action="{% url 'logout' %}">
+                    <a><form method="post" action="{% url 'logout' %}">
                         {% csrf_token %}
                         <button type="submit" class="opciones-cerrar-sesion">Salir</button>
-                    </form>
+                    </form></a>
                 </li>
                 <li><a href="">Sobre nosotros</a></li>
             </ul>
