--- a/BEEL/registro_login/templates/registro/cambiar_password.html
+++ b/BEEL/registro_login/templates/registro/cambiar_password.html
@@ -1,6 +1,8 @@
 {% extends "plantilla2.html" %}
 {% load static %}
 {% block content %}
+<link rel="stylesheet" href="{% static 'css/cambiar_password.css' %}">
+<div class="container">
     <h2>Cambiar Contraseña</h2>
     <form method="post">
         {% csrf_token %}
@@ -8,5 +10,5 @@
         <button type="submit">Actualizar Contraseña</button>
     </form>
     <a href="{% url 'editar_perfil' %}">Volver a Editar Perfil</a>
-
+</div>
 {% endblock %}
