--- a/BEEL/registro_login/static/css/editar_perfil.css
+++ b/BEEL/registro_login/static/css/editar_perfil.css
@@ -81,8 +81,18 @@
     border: none;
     border-radius: 5px;
     cursor: pointer;
+    margin-top: 10px;
   }
-  
+
+  button:hover {
+    padding: 10px 20px;
+    background-color: rgb(0, 139, 0);
+    color: white;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+    margin-top: 10px;
+  }
   /* Enlace para cambiar contraseña */
   a {
     text-decoration: none;
