--- a/BEEL/registro_login/static/css/login.css
+++ b/BEEL/registro_login/static/css/login.css
@@ -1,7 +1,7 @@
 /* General Styles */
 body {
     font-family: Arial, sans-serif;
-    background-color: #f0f0f0;
+    background-color: #ffffff;
     margin: 0;
     padding: 0;
 }
@@ -9,24 +9,39 @@ body {
 /* Container with slight shadow */
 .container {
     border-radius: 10px;
-    box-shadow: 0 0px 0px rgba(0, 0, 0, 0.1);
+    box-shadow: 0 0px 0px rgba(255, 255, 255, 0.1);
     padding: 60px; 
 }
 
-/* Card with subtle hover effect */
-.card {
-    transition: transform 0.3s ease-out;
+.container{
+    animation: container-aparecer 1s ease-in-out;
 }
 
-.card:hover {
-    transform: translateY(-5px);
+@keyframes container-aparecer{
+    from {
+      opacity: 0; /* Start hidden */
+      transform: translateY(50px); /* Start above the viewport */
+    }
+    to {
+      opacity: 1; /* End visible */
+      transform: translateY(0); /* End in original position */
+    }
 }
+
+
+
+/* Card with subtle hover effect */
+div.card-body {
+    padding: 20px; 
+}
+
 
 /* Card title with adjusted text */
 .card-title {
     text-align: center;
     font-size: 3rem;
     color: #45a049;
+    font-weight: bold;
 }
 
 /* Card text with slight adjustment */
