--- a/BEEL/registro_login/templates/registro/iniciar_sesion.html
+++ b/BEEL/registro_login/templates/registro/iniciar_sesion.html
@@ -10,7 +10,7 @@
         <div class="card text-start mx-auto" style="width: 30rem;">
             <div class="card-body">
                 <h4 class="card-title">Inicia Sesión</h4>
-                <p class="card-text">Ingresa tus credenciales:</p>
+                <p class="card-text">Selecciona tu rol:</p>
 
                 <form method="post">
                     {% csrf_token %}
