udpate 25/06/2024 plantillas html organizadas y captcha matemático agregado

--- a/BEEL/registro_login/templates/empresa/ver_postulantes.html
+++ b/BEEL/registro_login/templates/empresa/ver_postulantes.html
@@ -37,6 +37,10 @@
                   <p><strong>Correo Electrónico:</strong> {{ aplicacion.correo_electronico }}</p>
                   <p><strong>Número de Contacto:</strong> {{ aplicacion.numero_contacto }}</p>
                   <p><strong>Conocimientos:</strong> {{ aplicacion.conocimientos }}</p>
+                  <form method="post" action="{% url 'rechazar_postulante' aplicacion.id %}">
+                    {% csrf_token %}
+                    <button type="submit">Rechazar</button>
+                  </form>
                 </div>
               </li>
             {% endfor %}
