--- a/BEEL/registro_login/templates/plantilla.html
+++ b/BEEL/registro_login/templates/plantilla.html
@@ -27,7 +27,7 @@
         <nav>
             <ul class="nav-links">
                 <li><a href="{% url 'welcome' %}">Inicio</a></li>
-                <li><a href="">Sobre nosotros</a></li>
+                <li><a href="{% url 'aboutus' %}">Sobre nosotros</a></li>
             </ul>
         </nav>
     </header>
