--- a/BEEL/registro_login/templates/plantilla2.html
+++ b/BEEL/registro_login/templates/plantilla2.html
@@ -32,7 +32,7 @@
                         <button type="submit" class="opciones-cerrar-sesion">Salir</button>
                     </form></a>
                 </li>
-                <li><a href="">Sobre nosotros</a></li>
+                <li><a href="{% url 'aboutus' %}">Sobre nosotros</a></li>
             </ul>
         </nav>
     </header>
