--- a/BEEL/registro_login/templates/paginasComunes/editar_perfil.html
+++ b/BEEL/registro_login/templates/paginasComunes/editar_perfil.html
@@ -7,7 +7,7 @@
     <h1>Editar Perfil</h1>
     <form method="post">
         {% csrf_token %}
-        {{ form.as_p }}
+        {{ form }}
         <button type="submit">Guardar Cambios</button>
     </form>
     <a href="{% url 'cambiar_password' %}">Cambiar Contraseña</a>
