mensage de estado de postulación mensage en el header

--- a/BEEL/registro_login/templates/plantilla2.html
+++ b/BEEL/registro_login/templates/plantilla2.html
@@ -35,9 +35,16 @@
                 <li><a href="{% url 'aboutus' %}">Sobre nosotros</a></li>
             </ul>
         </nav>
+        
     </header>
     
-    
+    {% if messages %}
+        <ul>
+            {% for message in messages %}
+                <li>{{ message }}</li>
+            {% endfor %}
+        </ul>
+    {% endif %}
 
 
     <!--Contenido cambiante-->
