campo de estado agregado al modelo de custom user, la vista de registro ahora asigna este estado automáticamente, estado agregado a la plantilla del home del postulante

--- a/BEEL/registro_login/templates/postulante/home_postulante.html
+++ b/BEEL/registro_login/templates/postulante/home_postulante.html
@@ -35,6 +35,7 @@
                 {% csrf_token %}
                 <button type="submit" class="opciones-cerrar-sesion">Cerrar sesión</button>
             </form>
+            <p>Estado actual: {{ status }}</p>
         </section>
     </main>
     
