--- a/BEEL/registro_login/templates/empresa/ver_postulantes.html
+++ b/BEEL/registro_login/templates/empresa/ver_postulantes.html
@@ -41,6 +41,10 @@
                     {% csrf_token %}
                     <button type="submit">Rechazar</button>
                   </form>
+                  <form method="post" action="{% url 'seleccionar_postulantes' aplicacion.id %}">
+                    {% csrf_token %}
+                    <button type="submit">Seleccionar</button>
+                  </form>
                 </div>
               </li>
             {% endfor %}
